adjusted readme